cmake_minimum_required(VERSION 3.19)
project(like1db)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
include_directories(./)
add_subdirectory(log)
add_subdirectory(page)
add_subdirectory(storage)
add_subdirectory(record)
#add_subdirectory(net)
add_executable(like1db main.cpp storage/index/btree/BtreeIndex.cpp storage/index/btree/BtreeIndex.h bufferpool/BufferPool.cpp bufferpool/BufferPool.h Like1db.cpp Like1db.h)
target_link_libraries(like1db redo page)